push cuz sleeptime

--- a/WolvenKit/Views/Editor/Basic/PropertiesView.xaml
+++ b/WolvenKit/Views/Editor/Basic/PropertiesView.xaml
@@ -14,6 +14,7 @@
     xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:local="clr-namespace:Wolvenkit.InteropControls;assembly=Wolvenkit.InteropControls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:model="clr-namespace:WolvenKit.Models;assembly=WolvenKit.App"
     xmlns:svl1="clr-namespace:WPFSoundVisualizationLib;assembly=WPFSoundVisualizationLibNet5"
@@ -635,8 +636,6 @@
                                                             ShowHours="True"
                                                             ShowSubSeconds="True"
                                                             Time="{Binding ChannelPosition}" />
-
-
                                                     </StackPanel>
                                                 </Border>
                                             </StackPanel>
@@ -698,11 +697,8 @@
                                         </Grid>
                                     </Border>
                                 </Grid>
-
                             </Grid>
-
                         </Grid>
-
                     </Grid>
                 </Border>
             </syncfusion:TabItemExt>
@@ -715,6 +711,11 @@
 
                 <syncfusion:SfImageEditor x:Name="bold" />
             </syncfusion:TabItemExt>
+
+            <syncfusion:TabItemExt
+                x:Name="testme"
+                Header="Video Preview"
+                Visibility="{Binding IsVideoPreviewVisible, Converter={StaticResource boolToVisibilityConverter}}" />
         </syncfusion:TabControlExt>
     </Grid>
 </catel:UserControl>
