Small Visual Fix

--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -158,6 +158,7 @@
 
                 <StackPanel Orientation="Vertical">
                     <StackPanel
+                        Margin="0,5,0,0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         Orientation="Horizontal">
@@ -186,6 +187,7 @@
                         <Button
                             Margin="5,0,5,0"
                             Padding="2,0,2,0"
+                            VerticalAlignment="Center"
                             Background="{DynamicResource ContentBackground}"
                             BorderBrush="{DynamicResource ContentBackgroundAlt}"
                             BorderThickness="1"
@@ -258,7 +260,7 @@
                                 <TextBlock Text="Copy" />
                             </StackPanel>
                         </Button>
-                        <TextBlock Text="settings from selected file to : " />
+                        <TextBlock VerticalAlignment="Center" Text="settings from selected file to : " />
                         <syncfusion:ComboBoxAdv
                             x:Name="ToThese"
                             VerticalAlignment="Center"
@@ -272,6 +274,7 @@
                         <Button
                             Margin="5,0,5,0"
                             Padding="2,0,2,0"
+                            VerticalAlignment="Center"
                             Click="Button_Click"
                             FontSize="12"
                             Style="{DynamicResource ButtonCustom}">
