--- a/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Editor/Tools/ImportExportView.xaml
@@ -53,6 +53,7 @@
                     <RadioButton
                         x:Name="ExportCheckBox"
                         Background="Transparent"
+                        Margin="0,0,5,0"
                         Content="EXPORTABLES"
                         GroupName="bob"
                         IsChecked="{Binding IsExportsSelected}" />
@@ -73,6 +74,7 @@
                 Grid.Row="1"
                 AllowEditing="True"
                 AllowFiltering="True"
+                CellDoubleTapped="SfDataGrid_CellDoubleTapped"
                 AllowResizingColumns="True"
                 AllowSorting="True"
                 AutoGenerateColumns="False"
