Video Player fixes.

--- a/WolvenKit/Views/Editor/Basic/AssetBrowserView.xaml
+++ b/WolvenKit/Views/Editor/Basic/AssetBrowserView.xaml
@@ -236,7 +236,8 @@
                                             <MenuItem
                                                 x:Name="BKExport"
                                                 Click="BKExport_Click"
-                                                Header="Export BK2 to Avi" />
+                                                Header="Export BK2 to Avi"
+                                                Visibility="Collapsed"/>
                                         </MenuItem>
                                     </ContextMenu>
                                 </syncfusion:SfDataGrid.RecordContextMenu>
