--- a/WolvenKit/Views/HomePage/Pages/UserPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/UserPageView.xaml
@@ -53,252 +53,8 @@
         MinWidth="300"
         MinHeight="300"
         hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"
-        Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
+        Background="{DynamicResource ContentBackgroundAlt2}">
 
-        <StackPanel
-            Margin="5"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Orientation="Horizontal">
 
-            <TextBlock
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center "
-                FontSize="20"
-                Text="Profile" />
-            <hc:Divider
-                Height="45"
-                Margin="15"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Orientation="Vertical" />
-            <hc:AnimationPath
-                Width="45"
-                Height="45"
-                Margin="5"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Data="{DynamicResource UserGeo}"
-                PathLength="105"
-                Stretch="Uniform"
-                Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                StrokeThickness="1.5"
-                Duration="00:00:06">
-                <hc:AnimationPath.LayoutTransform>
-                    <RotateTransform Angle="180" />
-                </hc:AnimationPath.LayoutTransform>
-            </hc:AnimationPath>
-        </StackPanel>
-
-        <Grid Margin="3,75,3,0">
-
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="160" />
-                <RowDefinition Height="150" />
-                <RowDefinition Height="2*" />
-                <RowDefinition Height="1*" />
-            </Grid.RowDefinitions>
-
-            <Grid Grid.Row="0" Grid.Column="0">
-                <Border
-                    Margin="15,0,5,10"
-                    Background="{DynamicResource RegionBrush}"
-                    CornerRadius="10">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="150" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <Border
-                            Margin="9"
-                            HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch"
-                            Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                            CornerRadius="10" />
-                        <Grid
-                            Grid.Column="1"
-                            Margin="0,0,0,0"
-                            VerticalAlignment="Center">
-                            <StackPanel>
-                                <Border
-                                    Height="30"
-                                    Margin="0,5,10,5"
-                                    Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                                    CornerRadius="5">
-                                    <TextBlock
-                                        Margin="5,0,0,0"
-                                        VerticalAlignment="Center"
-                                        Text="User" />
-                                </Border>
-                                <Border
-                                    Height="30"
-                                    Margin="0,5,10,5"
-                                    Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                                    CornerRadius="5">
-                                    <TextBlock
-                                        Margin="5,0,0,0"
-                                        VerticalAlignment="Center"
-                                        Text="User" />
-                                </Border>
-                                <Border
-                                    Height="30"
-                                    Margin="0,5,10,5"
-                                    Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                                    CornerRadius="5">
-                                    <TextBlock
-                                        Margin="5,0,0,0"
-                                        VerticalAlignment="Center"
-                                        Text="User" />
-                                </Border>
-                            </StackPanel>
-                        </Grid>
-                    </Grid>
-                </Border>
-            </Grid>
-            <Grid Grid.Row="0" Grid.Column="1">
-                <Border
-                    Margin="5,0,15,10"
-                    Background="{DynamicResource RegionBrush}"
-                    CornerRadius="10">
-                    <Grid FlowDirection="RightToLeft">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="150" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <Border
-                            Margin="9"
-                            HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch"
-                            Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                            CornerRadius="10" />
-                        <Grid
-                            Grid.Column="1"
-                            Margin="0,0,0,0"
-                            VerticalAlignment="Center">
-                            <StackPanel>
-                                <Border
-                                    Height="30"
-                                    Margin="0,5,10,5"
-                                    Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                                    CornerRadius="5">
-                                    <TextBlock
-                                        Margin="5,0,0,0"
-                                        VerticalAlignment="Center"
-                                        Text="User" />
-                                </Border>
-                                <Border
-                                    Height="30"
-                                    Margin="0,5,10,5"
-                                    Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                                    CornerRadius="5">
-                                    <TextBlock
-                                        Margin="5,0,0,0"
-                                        VerticalAlignment="Center"
-                                        Text="User" />
-                                </Border>
-                                <Border
-                                    Height="30"
-                                    Margin="0,5,10,5"
-                                    Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                                    CornerRadius="5">
-                                    <TextBlock
-                                        Margin="5,0,0,0"
-                                        VerticalAlignment="Center"
-                                        Text="User" />
-                                </Border>
-                            </StackPanel>
-                        </Grid>
-                    </Grid>
-                </Border>
-            </Grid>
-
-            <Grid Grid.Row="1" Grid.ColumnSpan="2">
-                <Border
-                    Margin="15,0,15,10"
-                    Background="{DynamicResource RegionBrush}"
-                    CornerRadius="10" />
-            </Grid>
-
-            <Grid
-                Grid.Row="2"
-                Grid.RowSpan="2"
-                Grid.ColumnSpan="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="1*" />
-                </Grid.ColumnDefinitions>
-                <Border
-                    Grid.Column="0"
-                    Margin="15,0,5,15"
-                    Background="{DynamicResource RegionBrush}"
-                    CornerRadius="15">
-
-                    <Border
-                        Grid.Column="0"
-                        Margin="1,170,1,15"
-                        Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" />
-                </Border>
-                <Border
-                    Grid.Column="1"
-                    Margin="5,0,5,15"
-                    Background="{DynamicResource RegionBrush}"
-                    CornerRadius="15">
-                    <Border
-                        Grid.Column="0"
-                        Margin="1,170,1,15"
-                        Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" />
-                </Border>
-                <Border
-                    Grid.Column="2"
-                    Margin="5,0,15,15"
-                    Background="{DynamicResource RegionBrush}"
-                    CornerRadius="15">
-                    <Border
-                        Grid.Column="0"
-                        Margin="1,170,1,15"
-                        Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" />
-                </Border>
-
-                <Grid
-                    Width="250"
-                    Height="150"
-                    Margin="15,10,5,15"
-                    VerticalAlignment="Top">
-                    <hc:CoverFlow x:Name="CoverFlowMain" Style="{StaticResource CoverFlowBaseStyle2}" />
-                </Grid>
-                <Grid
-                    Grid.Column="1"
-                    Width="250"
-                    Height="150"
-                    Margin="5,10,5,15"
-                    VerticalAlignment="Top">
-                    <hc:CoverFlow x:Name="asd3423" Style="{StaticResource CoverFlowBaseStyle2}" />
-                </Grid>
-                <Grid
-                    Grid.Column="2"
-                    Width="250"
-                    Height="150"
-                    Margin="5,10,15,15"
-                    VerticalAlignment="Top">
-                    <hc:CoverFlow x:Name="dsfdsf" Style="{StaticResource CoverFlowBaseStyle2}" />
-                </Grid>
-            </Grid>
-        </Grid>
-
-        <Grid Background="{DynamicResource RegionBrush}" Visibility="Collapsed">
-
-            <Label
-                Grid.Row="1"
-                VerticalAlignment="Center"
-                Background="Transparent"
-                BorderBrush="Transparent"
-                Content="COMING SOON"
-                FontSize="50" />
-        </Grid>
     </Grid>
 </catel:UserControl>
